--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-OWNER_ID = ""
-UPSTREAM_REPO = ""
+BOT_TOKEN = "6434421766:AAGiQyligfJ8wZhaq7GX6bUesuey6KanT1M"
+TELEGRAM_API = "28643132"
+TELEGRAM_HASH = "510c3009ea589830a89e045bf8aae656"
+OWNER_ID = "1739381637"
+UPSTREAM_REPO = "https://gitlab.com/mysterysd.sd/WZML-X"
 UPSTREAM_BRANCH = "hk_wzmlx"
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://andi:kannan@cluster0.1fwrxgn.mongodb.net/?retryWrites=true&w=majority"
 BASE_URL = ""
-TORRENT_TIMEOUT = "0"
+TORRENT_TIMEOUT = "1000"
