--- a/config.env
+++ b/config.env
@@ -2,8 +2,8 @@ BOT_TOKEN = "6434421766:AAGiQyligfJ8wZhaq7GX6bUesuey6KanT1M"
 TELEGRAM_API = "28643132"
 TELEGRAM_HASH = "510c3009ea589830a89e045bf8aae656"
 OWNER_ID = "1739381637"
-UPSTREAM_REPO = "https://gitlab.com/mysterysd.sd/WZML-X"
+UPSTREAM_REPO = "https://github.com/TGxIRFAN/WZML-X"
 UPSTREAM_BRANCH = "hk_wzmlx"
 DATABASE_URL = "mongodb+srv://andi:kannan@cluster0.1fwrxgn.mongodb.net/?retryWrites=true&w=majority"
 BASE_URL = "https://cxleech-67f19e8aff47.herokuapp.com/"
-TORRENT_TIMEOUT = "100000"
+TORRENT_TIMEOUT = "0"
