--- a/config.env
+++ b/config.env
@@ -5,5 +5,5 @@ OWNER_ID = "1739381637"
 UPSTREAM_REPO = "https://github.com/TGxIRFAN/WZML-X"
 UPSTREAM_BRANCH = "hk_wzmlx"
 DATABASE_URL = "mongodb+srv://andi:kannan@cluster0.1fwrxgn.mongodb.net/?retryWrites=true&w=majority"
-BASE_URL = "https://cxleech-67f19e8aff47.herokuapp.com/"
+BASE_URL = "https://kundanpro-4418913f8c54.herokuapp.com/"
 TORRENT_TIMEOUT = "0"
